# crusty-sean

./: Cargo.toml  README.md
splatoonbot/: Cargo.toml
splatoonbot/src/: config.rs  main.rs  mastodon.rs
splatoonbot/src/api/: internal.rs  mod.rs
