[package]
name = "splatoonbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
lazy_static = "1.4.0"
reqwest = "0.11.11"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
toml = "0.5.9"
